--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,3 @@
 PORT = 4000
 MONGODB_URI = 'mongodb+srv://admin:admin@bgremoval.w58wq.mongodb.net'
+CLERK_WEBHOOK_SECRET = 'whsec_UuZTjPUqMX4ymHd46c9FunDz6ozuHsa6'
